--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,71 +12,36 @@ add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
+option(QLUAU_BUILD_TEST "Build Luau Qt unit tests" ON)
+
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Test)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Test)
 
 set(LUAU_BUILD_CLI OFF)
 set(LUAU_BUILD_TESTS OFF)
-add_subdirectory(luau)
+add_subdirectory(deps/luau)
 
-set(PROJECT_SOURCES
-        main.cpp
-        mainwindow.cpp
-        mainwindow.h
-
+add_library(qluau SHARED
+        include/qluau.h src/qluau.cpp
+        src/qlpoint.cpp
+        include/qllibs.h
 )
 
-if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-    qt_add_executable(luau-qt
-        MANUAL_FINALIZATION
-        ${PROJECT_SOURCES}
-        qluau.h qluau.cpp
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+target_link_libraries(qluau PUBLIC
+        Qt${QT_VERSION_MAJOR}::Widgets
+        Luau.Compiler
+        Luau.VM
+)
+
+if (QLUAU_BUILD_TEST)
+    qt_add_executable(qluau_test
+            test/test.h test/test.cpp
     )
-# Define target properties for Android with Qt 6 as:
-#    set_property(TARGET luau-qt APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
-#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
-# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
-else()
-    if(ANDROID)
-        add_library(luau-qt SHARED
-            ${PROJECT_SOURCES}
-        )
-# Define properties for Android with Qt 5 after find_package() calls as:
-#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
-    else()
-        add_executable(luau-qt
-            ${PROJECT_SOURCES}
-        )
-    endif()
-endif()
-
-target_link_libraries(luau-qt PRIVATE
-  Qt${QT_VERSION_MAJOR}::Widgets
-  Luau.Compiler
-  Luau.VM
-)
-
-# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
-# If you are developing for iOS or macOS you should consider setting an
-# explicit, fixed bundle identifier manually though.
-if(${QT_VERSION} VERSION_LESS 6.1.0)
-  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.luau-qt)
-endif()
-set_target_properties(luau-qt PROPERTIES
-    ${BUNDLE_ID_OPTION}
-    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
-    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
-    MACOSX_BUNDLE TRUE
-    WIN32_EXECUTABLE TRUE
-)
-
-include(GNUInstallDirs)
-install(TARGETS luau-qt
-    BUNDLE DESTINATION .
-    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-)
-
-if(QT_VERSION_MAJOR EQUAL 6)
-    qt_finalize_executable(luau-qt)
-endif()
+    target_link_libraries(qluau_test PRIVATE
+            qluau
+            Qt${QT_VERSION_MAJOR}::Test
+    )
+    add_test(NAME qluau_test COMMAND qluau_test)
+endif ()
