replace with pure lua

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "deps/luau"]
-	path = deps/luau
-	url = https://github.com/luau-lang/luau.git
+[submodule "deps/cmake-lua"]
+	path = deps/cmake-lua
+	url = https://github.com/walterschell/Lua.git
